# MT-Thresholds

./: .gitignore  README.md  asset-manifest.json  index.html  package.json
appendix/: accuracy_results.tex  accuracy_results.xlsx  main_thresholds.tex
public/: index.html
python-tool/: .gitignore  README.md  mt_thresholds.py  package-lock.json  pyproject.toml
src/: App.tsx  index.css  index.tsx  thresholds.json
static/css/: main.6c01fe19.css  main.6c01fe19.css.map  main.a05eccd4.css  main.a05eccd4.css.map
static/js/: main.38a22c1c.js  main.38a22c1c.js.map  main.c76a4c74.js  main.c76a4c74.js.map
web-tool/: README.md  package.json
web-tool/public/: index.html
web-tool/src/: App.tsx  Config.tsx  index.css  thresholds.json
